Add 'numFavorites' to catalog data for tapes
